wp-content/themes/betheme-child/style.css
/* ... */
#Footer .widgets_wrapper .widget{
    padding: 0px !important;
}
@media screen and (min-width:768px)
{
    #Footer .footer_copy {
        padding-top: 34px !important;
    }
}
@media(min-width:768px) and (max-width:1000px){
    #custm-tabbed{
        margin-top: -120px;
    }
    #custm-tabbed .ui-tabs-panel .tabbox ul{
        margin-left: 22px;
    }
    #custm-tabbed .ui-tabs-panel ul#tabs li a{
        display: inline;
    }
}
body > div:nth-last-child(2) {
    display:none;
}

